# Invest_e_Gator

./: .gitignore  app.py  pyproject.toml  requirements.txt  stock_news_scraper.md
Invest_e_Gator/conf/: config.yaml  data_sqlite.db
Invest_e_Gator/data/degiro_transactions/: mapper_file.csv
Invest_e_Gator/data/degiro_transactions/Val_test/transactions/persisted_data/: processed_files.txt
Invest_e_Gator/src/: constants.py  degiro_csv_processing.py  portfolio.py  portfolio_metrics.py  purchase_optimizer.py  ticker.py  transactions.py
Invest_e_Gator/src/secondary_modules/: currency_conversion.py  pydantic_valids.py
src/: constants.py  portfolio.py  purchase_optimizer.py  ticker.py  transactions.py
src/secondary_module/: yfinance_cache.py
src/secondary_modules/: pydantic_valids.py
