[tool.poetry]
name = "Invest_e_Gator"
version = "0.1.0"
authors = ["Your Name <youremail@example.com>"]
description = 'Portfolio tracked'
repository = "https://github.com/ValentinOzeel/Invest_e_Gator"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.2"
yfinance = {extras = ["nospam", "repair"], version = "^0.2.40"}
PyYAML = "^6.0.1"
forex-python = "^1.8"
currency_converter = "^0.17.25"
pydantic = "^2.8"
#investpy = "^1.0.8"
python-dotenv = "^1.0.1"
ratelimit = "^2.2.1"
finnhub-python = "^2.4.20"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
